Bug 92067 - GtkSalMenu: menu File>Templates>Manage executes action from the wrong submenu
Summary: GtkSalMenu: menu File>Templates>Manage executes action from the wrong submenu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta3
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.2
Keywords:
: 98377 99154 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-14 19:21 UTC by Jean-Baptiste Faure
Modified: 2016-10-25 19:02 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast (1.55 MB, video/ogg)
2015-09-14 18:48 UTC, Adolfo Jayme Barrientos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2015-06-14 19:21:08 UTC
I build LibreOffice 5.0 branch (currently beta-3+) and master under Ubuntu 15.04 x86-64 and both have the same problem, directly linked to Unity. If I build with Dbus then the menu File > Templates > Manage opens a toolbar instead of the Template manager. In LO 5.0 the toolbar is the Media Playback, in the master the toolbar is the Insert toolbar.
If I add the option --disable-dbus in my autogen.input then the problem is gone (and the global menu in Unity too).

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2015-06-14 19:23:20 UTC
Hi Bjoern,

This bug report may be interesting for you.

Best regards. JBF
Comment 2 geraldg 2015-06-20 14:53:12 UTC
I have installed the deb-64-packages. The template manager opens correctly.
Comment 3 Jean-Baptiste Faure 2015-07-02 18:15:44 UTC
To reproduce the problem, you need to use LibreOffice 5.0 rc3 with the vcl plugin gtk2 instead of gtk3 that is used by default. To do that set the environment variable SAL_USE_VCLPLUGIN to the value "gtk":
export SAL_USE_VCLPLUGIN="gtk"

The problem does not occur for me if I use the VCL plugin for GTK3.

Best regards. JBF
Comment 4 Adolfo Jayme Barrientos 2015-09-14 18:48:31 UTC
Created attachment 118713 [details]
Screencast

I can confirm that clicking File > Template > Manage opens the Fontwork toolbar instead of the Template Manager. Its shortcut works, nevertheless. See the attached screencast.
Comment 5 Maxim Monastirsky 2016-03-03 09:51:04 UTC
*** Bug 98377 has been marked as a duplicate of this bug. ***
Comment 6 Maxim Monastirsky 2016-03-03 11:39:44 UTC
That
Comment 7 Jean-Baptiste Faure 2016-03-04 05:54:27 UTC
It seems that the workaround consisting in using the GTK3 plugin does not work for the current master and LO 5.1

Best regards. JBF
Comment 8 Caolán McNamara 2016-03-11 16:33:30 UTC
Hillarious with native gtk3 menus I get a drawing shape with this menu. I think the problem is that the command ".uno:NewDoc" is duplicated in the menu structure causing "odd things" to happen with the second .uno:NewDoc
Comment 9 Commit Notification 2016-03-12 21:07:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e22618a355c0e506b8cfac9c52e9564db26949d2

Resolves: tdf#92067 with duplicate menu entries track which to activate

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2016-03-12 21:15:41 UTC
That seems to work fine for this duplicated entry.

caolan->cor: I seem to recall you showing me a problem with this exact menu entry in the past.
Comment 11 Commit Notification 2016-03-13 19:51:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f9b729dba5d1dd9a87241284a67ee4dfc91bee2f&h=libreoffice-5-1

Resolves: tdf#92067 with duplicate menu entries track which to activate

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Jean-Baptiste Faure 2016-03-13 21:07:37 UTC
Verified fixed in LO 5.1.2.0.0+.
Thank you very much.

Best regards. JBF
Comment 13 Adolfo Jayme Barrientos 2016-04-09 13:40:52 UTC
*** Bug 99154 has been marked as a duplicate of this bug. ***
Comment 14 Samuel Mehrbrodt 2016-04-18 13:52:57 UTC
This bug still happens for me in master built on 2016-04-15.
Comment 15 Maxim Monastirsky 2016-04-18 14:24:27 UTC
(In reply to Samuel Mehrbrodt (CIB) from comment #14)
> This bug still happens for me in master built on 2016-04-15.

It was broken again with

commit 66db55aa84e8401a9eccedb02c67150833a344ba
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Mar 15 11:15:40 2016 +0000

    Resolves: tdf#98636
Comment 16 Commit Notification 2016-05-06 10:25:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=27014f563577c3c5da19e37a57d4e73c0ebae140

Resolves: tdf#92067 and tdf#99599, use a foolproof action naming scheme

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.