Resolves: tdf#92067 with duplicate menu entries track which to activate

rather than just stick 2/3/4 at the end embed that this is a dup as the
prefix and strip that off at dispatch time and pass the dup index around
as a counter to how many dup candidates to dismiss to find the desired
one.

Change-Id: I81d97090a7e9b8c2995a3b27934f3ee5636d05fe